--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "npx mocha",
+    "test": "node_modules/mocha/bin/mocha ./tests",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
     "@testing-library/react": "^14.1.2",
-    "chai": "^5.0.0",
     "mocha-vite-puppeteer": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
