--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@testing-library/react": "^14.1.2",
+    "chai": "^5.0.0",
     "mocha-vite-puppeteer": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
